app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

*{
    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

@media only screen and (max-width: 600px) {

    /* MAIN JS MEDIA QUERY*/ 
    .main-div h1, .main-div b{
        font-size: 3rem;
        padding-top: 1vh;
    }

    /* CARDS JS */
    .parent{
        height: max-content;
    }

    .both-cards{
        display: flex;
        flex-direction: column;
        gap: 20px; 
        /* Gap between the 2 cards */
    }
    .both-cards-parent{
        display: flex;
        justify-content: center;
        align-items: center;
    }
    .Card{
        width: 80vw;
        height: 80vw;
        padding-bottom: 5vh;
    }
    .input{
        width: 35vw;
    }




/* FOOTER */
    .footer-div{
        position: static;
        bottom: 0;
        left: 0;
        right: 0;
        background-color: orange;
        padding: 2px; 
        text-align: center;
        color: white;
        font-weight:800;
        width: 100vw;
        text-decoration: underline;
        font-size: x-small;
   
    }

}
    

